--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.31.0",
+    "@thirdweb-dev/react": "^4.6.5",
     "@web3modal/wagmi": "^4.1.10",
     "next": "14.2.2",
     "react": "^18",
